--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>3.1.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>tn.esprit.spring</groupId>
+    <groupId>tn.esprit</groupId>
     <artifactId>Foyer</artifactId>
     <version>1.4.0-RELEASE</version>
     <name>Foyer</name>
